.dropdown display: inline-block causing alignment issues in other components

--- a/packages/clay/src/scss/lr7-classic-theme/_dropdowns.scss
+++ b/packages/clay/src/scss/lr7-classic-theme/_dropdowns.scss
@@ -22,10 +22,6 @@
 
 
 //Dropdowns
-.dropdown {
-	display: inline-block;
-}
-
 .dropdown-header {
 	line-height: 1;
 	padding: 3px 12px;
